testsuite/tests/typecheck/should_run/T7861.stderr
T7861: T7861.hs:11:5:
    Couldn't match type ‛a’ with ‛[a0]’
      ‛a’ is a rigid type variable bound by
          the type signature for f :: A a -> a at T7861.hs:10:6
    Expected type: A a -> a
      Actual type: A a0 -> [a0]
    Relevant bindings include f :: A a -> a (bound at T7861.hs:11:1)
    In the expression: doA
    In an equation for ‛f’: f = doA
(deferred type error)
